# IMAGINATION

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  api.py  build.py  config.py  debug.bat  main.py  manifest.json  manifest.py  pyproject.toml  registry.py  requirements.txt  runtime.py
bots/: rebirth.py  tmg.py
core/: api.py  config.py  registry.py  runtime.py
