[project]
name = "IMAGINATION"
version = "2.0.0"
description = "Automation framework for the SMT: IMAGINE client"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mss>=10.2.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "platformdirs>=4.10.0",
    "pydirectinput-rgx>=2.1.3",
    "pywinctl>=0.4.1",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "cx-freeze>=8.6.4",
    "ruff>=0.15.13",
]
